# vacancy-crawler

./: .gitignore  pyproject.toml  readme.md
src/: constants.py  main.py  parser.py  ui.py
src/constants/: categories.py  keywords.py  params.py  parser.py
src/parser/: output.py  parser.py
src/utils/: args.py  constants.py  types.py  utils.py
